[metadata]
name = mon-health
version = 1.0.0-alpha
url = https://github.com/JohnLapis/mon_health
description = Shell for storing food related information.
long_description = file: README.rst
author = Matheus Borges Alvite
author_email = borges-2014@live.com
license = GPLv3
license_files = LICENSE
keywords = shell, health, food, database
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6

[options]
packages = mon_health
install_requires =
    click
    peewee
zip_safe = False
include_package_data = True

[options.entry_points]
console_scripts =
    mon-health = mon_health.__main__:main
